--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 @font-face {
   font-family: 'asdfadsf';
-  src:  url('./fonts/Bagnard.woff2') format('woff2'),
-        url('./fonts/Bagnard.woff') format('woff');
+  src:  url('./fonts/DalaPrisma-Roman-Web.woff2') format('woff2'),
+        url('./fonts/DalaPrisma-Roman-Web.woff') format('woff');
 }
 
 @font-face {
@@ -18,7 +18,7 @@
 
 html {
     height: 100%;
-    background: aliceblue;
+    background: #f3f3f3;
     display: flex;
     justify-content: center;
     transition: background 0.7s ease;
@@ -36,6 +36,8 @@ body {
 h1 {
     font-family: 'asdfadsf';
     font-size: 120px;
+    text-align: center;
+    font-weight: normal;
     margin: 0;
     margin-bottom: 10px;
     color: blue;
