--- a/src/style.scss
+++ b/src/style.scss
@@ -17,7 +17,19 @@ body {
 
 canvas {
   width: 100%;
+  height: 100%;
   position: absolute;
+  z-index: 0;
+}
+
+h1 {
+  position: absolute;
+  z-index: 2;
+  right: 10%;
+  bottom: 10%;
+  font-family: monospace;
+  color: white;
+  font-size: 6rem;
 }
 
 main {
