🏷   Add meta tags, improve phone ux

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,7 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
+  justify-content: center;
 }
 
 canvas {
@@ -25,7 +26,9 @@ canvas {
 h1 {
   position: absolute;
   z-index: 2;
-  left: 50%;
+  right: 10%;
+  width: 32rem;
+  text-align: left;
   bottom: 10%;
   font-family: monospace;
   color: white;
@@ -34,4 +37,13 @@ h1 {
 
 main {
   flex: 1;
+}
+
+@media (max-width: 800px) {
+  h1 {
+    font-size: 3rem;
+    width: 16rem;
+    bottom: 10%;
+    right: unset;
+  }
 }
